--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -10,4 +10,4 @@ jobs:
             - name: Install
               run: npm ci
             - name: Lint
-              run: npm run lint
+              run: npm run type-check
