--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,13 +1,24 @@
 on: [push]
 
 jobs:
-    check:
-        name: Check
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v3
-            - name: Install
-              run: npm ci
-            - name: Lint
-              run: npm run type-check
+  check:
+    name: Check
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Install
+        run: npm ci
+      - name: Type-check
+        run: npm run type-check
+  deploy:
+    needs: [check]
+    name: Deploy
+    runs-on: ubuntu-latest
+    steps:
+      - name: Connect to server
+        uses: ssh root@94.103.183.26
+      - name: Enter password
+        uses: lZ5lS0dH1cbI
+      - name: Update version
+        uses: cd /root/calc_u
