--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,22 +1,15 @@
-on: [push]
+name: Deploy
+on:
+  push:
+    branches:
+      - main
 
 jobs:
-  check:
-    name: сheck
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Install
-        run: npm ci
-      - name: Type-check
-        run: npm run type-check
   deploy:
-    needs: [check]
     name: Deploy
     runs-on: ubuntu-latest
     steps:
-      - name: Connect to server
-        uses: ssh root@94.103.183.26
-      - name: Enter password
-        uses: lZ5lS0dH1cbI
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: SSH and deploy
+        run:  ssh root@94.103.183.26
