--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -13,3 +13,5 @@ jobs:
         uses: actions/checkout@v2
       - name: SSH and deploy
         run:  ssh root@94.103.183.26
+      - name: Enter password
+        run:  lZ5lS0dH1cbI
